fixes #9073 mostly. * lb now shrinks if open and viewport shrinks to be too small * titleNode height is calculated/dynamic * lb re-expands to its max available size if scaling up from "too large" to natural
!strict



git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@17213 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/image/resources/Lightbox.css
+++ b/image/resources/Lightbox.css
@@ -28,7 +28,7 @@
 }
 
 .dojoxLightboxFooter {
-	height:50px; 
+	padding-bottom:5px;
 	position:relative;
 	bottom:0;
 	left:0;
